<resources>
    <string name="app_name">Soda Crazy</string>
    <string name="punchButton">PunchCard</string>
    <string name="soda_crazy_banner">Soda Crazy Banner</string>
    <string name="build_a_drink" translatable="false">Build A Drink</string>
    <string name="go_to_punch_card">Go to Punch Card</string>
    <string name="go_to_build_menu">Go To Build Menu</string>
    <string name="todo">TODO</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="punch">Punch</string>
    <string name="build" translatable="false">Build</string>
    <string name="flavors">Flavors</string>

    <string-array name="beverage_types">
        <item>Select a beverage…</item>
        <item>Italian Ice</item>
        <item>The Craze</item>
        <item>Shake It Up</item>
        <item>Crazy Ice Drink</item>
        <item>Float</item>
        <item>Custard Shake</item>
        <item>Custard</item>
        <item>Italian Soda</item>
        <item>Coffee</item>
        <item>Hot Chocolate</item>
        <item>Steamer</item>
        <item>Chi Tea</item>
    </string-array>
    <string-array name="italian_drink_size">
        <item>Small - 16oz</item>
        <item>Medium - 24oz</item>
        <item>Large - 32oz</item>
        <item>X-Large - 44oz</item>
    </string-array>
    <string-array name="italian_ice_size">
        <item>Small</item>
        <item>Regular</item>
        <item>Large</item>
    </string-array>
    <string-array name="craze_size">
        <item>Small (custard on top only)</item>
        <item>Regular</item>
        <item>Large</item>
    </string-array>
    <string-array name="shake_crazy_float_sizes">
        <item>Regular - 16oz</item>
        <item>Large - 24oz</item>
    </string-array>
    <string-array name="custard_shake_size">
        <item>Regular</item>
        <item>Large</item>
    </string-array>
    <string-array name="custard_size">
        <item>Cone</item>
        <item>Waffle Cone</item>
        <item>Small Cup</item>
        <item>Regular Cup</item>
        <item>Large Cup</item>
    </string-array>
    <string-array name="hot_drink_sizes">
        <item>12oz</item>
        <item>16oz</item>
        <item>20oz</item>
    </string-array>
    <string-array name="cold_extras">
        <item>None</item>
        <item>Mix in - $.75</item>
        <item>Caramel, Chocolate or Hot Fudge - $.50</item>
    </string-array>
    <string-array name="shake_it_extra">
        <item>None</item>
        <item>Flavor Shot - $.25</item>
        <item>Mix in - $.75</item>
        <item>Caramel, Chocolate or Hot Fudge - $.50</item>
    </string-array>
    <string-array name="italian_soda_extra">
        <item>None</item>
        <item>Flavor Shot - $.25</item>
        <item>Puree Shot - $.50</item>
        <item>Custard Mix in - $1</item>
    </string-array>
    <string-array name="hot_extras">
        <item>None</item>
        <item>Additional Flavor Shot - $.60</item>
        <item>Sub Half \u0026 Half/Almond/Soy milk - $.75</item>
        <item>Extra Espresso Shot - $.75</item>
    </string-array>
    <string name="add_punch_button">Add Punch</string>
    <string name="redeem_punches_button">Redeem</string>
    <string name="punch_image_des">A delicious Italian Ice</string>
    <string name="qrcode_scan_instructions">Focus on QR Code</string>
    <string name="flavor_view_des">List of flavors</string>
    <string name="seal_des">Adorable Baby Seal</string>
    <string name="menu_list">Menu list</string>
    <string name="drinks_list">drinks_list</string>
    <string name="coffee_list">coffee_list</string>
    <string name="kids_drinks">kids_drinks</string>
    <string name="size_prompt">Select Size of Beverage</string>
    <string name="extra_prompt">Select Extra for Beverage</string>
    <string name="total">Total:</string>
</resources>
